--- a/aml.SinglePageApplicationMVC.Web/aml.SinglePageApplicationMVC.Web/Views/Partials/_CreateCustomer.cshtml
+++ b/aml.SinglePageApplicationMVC.Web/aml.SinglePageApplicationMVC.Web/Views/Partials/_CreateCustomer.cshtml
@@ -32,5 +32,5 @@
     </div>
 </form>
 <div>
-    @Html.ActionLink("Back to List", "Index", null, new { data_ng_href = "/" })
+    @Html.ActionLink("Back to List", "Index", null, new { data_ng_href = "/Customer" })
 </div>
