--- a/aml.SinglePageApplicationMVC.Web/aml.SinglePageApplicationMVC.Web/Views/Partials/_ShowCustomers.cshtml
+++ b/aml.SinglePageApplicationMVC.Web/aml.SinglePageApplicationMVC.Web/Views/Partials/_ShowCustomers.cshtml
@@ -3,7 +3,7 @@
 <h2>Customers</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create", null, new { data_ng_href = "/Create" })
+    @Html.ActionLink("Create New", "Create", null, new { data_ng_href = "/Customer/Create" })
 </p>
 <table class="table">
     <tr>
@@ -30,9 +30,9 @@
     }
 
     <tr class="ng-hide" data-ng-show="Show" data-ng-repeat="item in Customers">
-        <td data-ng-bind="item.DisplayName"></td>
-        <td data-ng-bind="item.DateOfBirth"></td>
-        <td data-ng-bind="item.Age"></td>
+        <td data-ng-bind="item.FirstName"></td>
+        <td data-ng-bind="item.Surname"></td>
+        <td data-ng-bind="item.Telephone"></td>
         <td><a href="" data-ng-click="edit(item.Id)">Edit</a></td>
     </tr>
 
