--- a/aml.SinglePageApplicationMVC.Web/aml.SinglePageApplicationMVC.Web/Views/Partials/_EditCustomer.cshtml
+++ b/aml.SinglePageApplicationMVC.Web/aml.SinglePageApplicationMVC.Web/Views/Partials/_EditCustomer.cshtml
@@ -11,18 +11,21 @@
             @Html.LabelFor(model => model.FirstName, "First Name", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.FirstName, new { htmlAttributes = new { @class = "form-control", data_ng_model = "Customer.FirstName" } })
+                @Html.ValidationMessageFor(model => model.FirstName, "Please enter your First Name")
             </div>
         </div>
         <div class="form-group">
             @Html.LabelFor(model => model.Surname, "Last Name", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Surname, new { htmlAttributes = new { @class = "form-control", data_ng_model = "Customer.Surname" } })
+                @Html.ValidationMessageFor(model => model.Surname, "Please enter your Last Name")
             </div>
         </div>
         <div class="form-group">
             @Html.LabelFor(model => model.Telephone, "Phone Number", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Telephone, new { htmlAttributes = new { @class = "form-control", data_ng_model = "Customer.Telephone" } })
+                @Html.ValidationMessageFor(model => model.Telephone, "Please enter yout Phone number")
             </div>
         </div>
         <div class="form-group">
